[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 192.55
margin_right = 720.0
margin_bottom = 950.55
rect_min_size = Vector2( 720, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 720.0
margin_bottom = 250.0
rect_min_size = Vector2( 720, 250 )

[node name="Button" type="Button" parent="VBoxContainer/CenterContainer"]
margin_left = 260.0
margin_top = 75.0
margin_right = 460.0
margin_bottom = 175.0
rect_min_size = Vector2( 200, 100 )
text = "Show Interstitial"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 254.0
margin_right = 720.0
margin_bottom = 504.0
rect_min_size = Vector2( 720, 250 )

[node name="Button" type="Button" parent="VBoxContainer/CenterContainer2"]
margin_left = 260.0
margin_top = 75.0
margin_right = 460.0
margin_bottom = 175.0
rect_min_size = Vector2( 200, 100 )
text = "Show Rewarded "

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
margin_top = 508.0
margin_right = 720.0
margin_bottom = 758.0
rect_min_size = Vector2( 720, 250 )

[node name="Button" type="Button" parent="VBoxContainer/CenterContainer3"]
margin_left = 260.0
margin_top = 75.0
margin_right = 460.0
margin_bottom = 175.0
rect_min_size = Vector2( 200, 100 )
text = "Show Banner"
[connection signal="pressed" from="VBoxContainer/CenterContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/Button" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer3/Button" to="." method="_on_Button3_pressed"]
